--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -9,14 +9,16 @@
   "save": "Save",
   "edit": "Edit",
   "error": "Error",
+  "view": "View",
+  "key": "Key",
   "success": "Success",
-  "select-store": "Select Store",
   "selected-store-id": "Selected store ID:",
+  "store-id": "Store ID",
   "select-directory-or-files-to-deploy": "Select directory or files to deploy",
   "no-stores-found": "No Stores Found",
   "create-new-store": "Create New Store",
   "unable-to-load-stores-click-to-retry": "Unable to load stores. Click to retry.",
-  "loading-your-stores": "Loading your stores...",
+  "loading-...": "Loading ...",
   "unable-to-create-new-store": "Unable to create new store",
   "successfully-created-new-store": "Successfully created new store",
   "invalid-component-state": "INVALID COMPONENT STATE",
