feat: added back to myStores link

--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -10,6 +10,7 @@
   "edit": "Edit",
   "error": "Error",
   "view": "View",
+  "back-to-my-stores": "Back to My Stores",
   "key": "Key",
   "success": "Success",
   "selected-store-id": "Selected store ID:",
