feat: added checkmark toggles for verbose and ignoreOrphan settings

--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -54,5 +54,6 @@
   "web-2-gateway-host": "Web 2 Gateway Host",
   "mirror-url-override": "Mirror URL Override",
   "num-files-processed-per-batch": "Num Files Processed Per Batch",
-  "verbose": "Verbose"
+  "verbose": "Verbose",
+  "ignore-orphans": "Ignore Orphans"
 }
