feat: completed refactor of settings components

--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -2,6 +2,7 @@
   "my-store": "My Store",
   "browser": "Browser",
   "settings": "Settings",
+  "access-settings": "Access Settings",
   "access-key": "Access Key",
   "access-secret": "Access Secret",
   "save": "Save",
@@ -48,7 +49,7 @@
   "certificate-folder-path": "Certificate Folder Path",
   "default-wallet-id": "Default Wallet ID",
   "default-mirror-coin-amount": "Default Mirror Coin Amount",
-  "default-fee": "Default Fee",
+  "default-fee-(in-mojos)": "Default Fee (in Mojos)",
   "maximum-rpc-payload-size": "Maximum RPC Payload Size",
   "web-2-gateway-port": "Web 2 Gateway Port",
   "web-2-gateway-host": "Web 2 Gateway Host",
