feat: added routes and leftnav buttons for edit and view store pages feat: refactored left nav for ease of future page addition

--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -1,5 +1,5 @@
 {
-  "my-store": "My Store",
+  "my-stores": "My Stores",
   "browser": "Browser",
   "settings": "Settings",
   "access-settings": "Access Settings",
@@ -9,6 +9,8 @@
   "edit": "Edit",
   "error": "Error",
   "view": "View",
+  "view-store": "View Store",
+  "edit-store": "Edit Store",
   "back-to-my-stores": "Back to My Stores",
   "key": "Key",
   "success": "Success",
