feat: added EditStore and ViewStore pages chore: refactored props object references out of jsx components

--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -13,9 +13,11 @@
   "edit-store": "Edit Store",
   "back-to-my-stores": "Back to My Stores",
   "key": "Key",
+  "deploy": "Deploy",
   "success": "Success",
   "important": "Important",
   "reset": "Reset",
+  "label": "Label",
   "selected-store-id": "Selected store ID:",
   "store-id": "Store ID",
   "store-count": "Store Count: ",
