--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -18,6 +18,7 @@
   "important": "Important",
   "reset": "Reset",
   "label": "Label",
+  "invalid-store-id": "Invalid Store ID",
   "selected-store-id": "Selected store ID:",
   "store-id": "Store ID",
   "store-count": "Store Count: ",
