feat: added fees for data store creation and folder deploy feat: added DeployFolderErrorModal

--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -37,8 +37,8 @@
   "browse-...": "Browse ...",
   "your-chia-wallet-is-not-synced": "Your Chia wallet is not synced.",
   "your-balance-must-be-at-least-one-Mojo-to-create-a-store.": "Your balance must be at least 1 Mojo to create a store.",
-  "error-occured-while-creating-store-ensure-chia-services-are-running-and-accessible":
-    "Error occured while creating store. Ensure Chia services are running and accessible.",
+  "error-occurred-while-creating-store" : "Error occurred while creating store.",
+  "ensure-chia-services-are-running-and-accessible.": "Ensure Chia services are running and accessible.",
   "creating-a-store-is-a-permanent-action-that-cannot-be-un-done!":
     "Creating a store is a permanent action that cannot be un-done!",
   "do-you-want-to-proceed-with-store-creation?": "Do you want to proceed with store creation?",
@@ -63,5 +63,6 @@
   "choose-folder": "Choose Folder",
   "waiting-for-transactions-to-confirm": "Waiting for transactions to confirm",
   "ignore-orphans": "Ignore Orphans",
-  "force-ip4-mirror": "Force IP4 Mirror"
+  "force-ip4-mirror": "Force IP4 Mirror",
+  "cannot-deploy-folder": "Cannot deploy folder"
 }
