feat: subscriptions table body feat: edit store label block and modal feat: edit store label modal

--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -17,7 +17,7 @@
   "success": "Success",
   "important": "Important",
   "reset": "Reset",
-  "label": "Label",
+  "store-label": "Store Label",
   "subscriptions": "Subscriptions",
   "size": "Size",
   "fee": "Fee",
@@ -32,7 +32,7 @@
   "no-data-in-store": "No data in store",
   "no-stores-found": "No Stores Found",
   "create-new-store": "Create New Store",
-  "unable-to-load-stores-click-to-retry": "Unable to load stores. Click to retry.",
+  "unable-to-load-click-to-retry": "Unable to load. Click to retry.",
   "insufficient-wallet-balance": "Insufficient wallet balance.",
   "please-try-again-later": "Please try again later.",
   "loading-...": "Loading ...",
