fix: storeId component feat: added data transformation to getSubscriptions ipc to add id's to the list of returned stores feat: added FauxLinkButton, a button styled like a link feat: added unsubscribe button to subscriptions table

--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -19,11 +19,14 @@
   "reset": "Reset",
   "store-label": "Store Label",
   "subscriptions": "Subscriptions",
+  "unsubscribe": "Unsubscribe",
+  "set-store-label": "Set Store Label",
   "size": "Size",
   "fee": "Fee",
   "invalid-store-id": "Invalid Store ID",
   "selected-store-id": "Selected store ID:",
   "subscription-store-id": "Subscription Store ID",
+  "add-store-subscription": "Add Store Subscription",
   "store-id": "Store ID",
   "store-count": "Store Count: ",
   "select-directory-to-deploy": "Select directory to deploy",
