--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -46,7 +46,7 @@
   "your-chia-wallet-is-not-synced": "Your Chia wallet is not synced.",
   "your-balance-must-be-at-least-one-Mojo-to-create-a-store": "Your balance must be at least 1 Mojo to create a store.",
   "error-occurred-while-creating-store" : "Error occurred while creating store.",
-  "ensure-chia-services-are-running-and-accessible.": "Ensure Chia services are running and accessible.",
+  "ensure-chia-services-are-running-and-accessible": "Ensure Chia services are running and accessible.",
   "creating-a-store-is-a-permanent-action-that-cannot-be-un-done!"
   : "Creating a store is a permanent action that cannot be un-done!",
   "do-you-want-to-proceed-with-store-creation?": "Do you want to proceed with store creation?",
