--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -13,6 +13,7 @@
   "edit-store": "Edit Store",
   "back-to-my-stores": "Back to My Stores",
   "key": "Key",
+  "and": "and",
   "deploy": "Deploy",
   "success": "Success",
   "important": "Important",
@@ -53,7 +54,7 @@
   "yes-create-store": "Yes, Create Store",
   "no-cancel-store-creation": "No, Cancel Store Creation",
   "yes-unsubscribe": "Yes, unsubscribe",
-  "no-cancel": "No, cancel",
+  "cancel": "Cancel",
   "web2-gateway-settings" :"Web2 Gateway Settings",
   "data-layer-storage-settings" :"Data Layer Storage Settings",
   "deployment-settings" :"Deployment Settings",
@@ -96,5 +97,10 @@
   : "Unsubscribing from this store will remove its associated data from this device.",
   "this-subscription-will-appear-in-your-subscriptions-list-until-all-of-its-local-data-has-been-removed"
   : "This subscription will appear in your subscriptions list until all of its local data has been removed.",
-  "do-you-want-to-unsubscribe-from-this-store?": "Do you want to unsubscribe from this store?"
+  "do-you-want-to-unsubscribe-from-this-store?": "Do you want to unsubscribe from this store?",
+  "unable-to-add-subscription": "Unable to add subscription",
+  "you-cannot-subscribe-to-your-own-store": "You cannot subscribe to your own store.",
+  "confirm-entered-store-id-is-correct-and-references-a-valid-store"
+  : "Confirm entered store ID is correct and references a valid store.",
+  "no-data-found": "No data found"
 }
