fix: removed necessary translation tokens and corrected token formatting

--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -21,12 +21,10 @@
   "size": "Size",
   "fee": "Fee",
   "invalid-store-id": "Invalid Store ID",
-  "selected-store-id": "Selected store ID:",
   "store-id": "Store ID",
-  "store-count": "Store Count: ",
+  "store-count:": "Store Count:",
   "select-directory-to-deploy": "Select directory to deploy",
   "deploy-selected-directory-to-store": "Deploy selected directory to store",
-  "selected-directory:-": "Selected directory: ",
   "no-data-in-store": "No data in store",
   "no-stores-found": "No Stores Found",
   "create-new-store": "Create New Store",
