--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -11,7 +11,7 @@
   "view": "View",
   "view-store": "View Store",
   "edit-store": "Edit Store",
-  "back-to-my-stores": "Back to My Stores",
+  "back": "Back",
   "key": "Key",
   "and": "and",
   "deploy": "Deploy",
@@ -98,5 +98,7 @@
   "you-cannot-subscribe-to-your-own-store": "You cannot subscribe to your own store.",
   "confirm-entered-store-id-is-correct-and-references-a-valid-store"
   : "Confirm entered store ID is correct and references a valid store.",
-  "no-data-found": "No data found"
+  "no-data-found": "No data found",
+  "add-store-subscription": "Add Store Subscription",
+  "subscription-store-id": "Subscription Store ID"
 }
