--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -107,5 +107,6 @@
   "if-you-need-to-install-chia-downloads-for-all-platforms-can-be-found-at"
   : "If you need to install Chia, downloads for all platforms can be found at",
   "the-official-downloads-page": "the official downloads page",
-  "chia-is-running-retry": "Chia is running, retry"
+  "chia-is-running-retry": "Chia is running, retry",
+  "waiting-for-wallet-to-sync": "Waiting for wallet to sync"
 }
