fix: datalayer handles wallet balance check logic fix: insufficient balance modal display logic feat: go to settings button in insufficient balance modal fix: DeployOptionInput null value error fix: inconsistent rtkQuery tags

--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -41,7 +41,8 @@
   "invalid-component-state": "INVALID COMPONENT STATE",
   "browse-...": "Browse ...",
   "your-chia-wallet-is-not-synced": "Your Chia wallet is not synced.",
-  "your-balance-must-be-at-least-one-Mojo-to-create-a-store": "Your balance must be at least 1 Mojo to create a store.",
+  "your-balance-must-be-greater-than-the-default-fee-to-create-a-store"
+  : "Your balance must be greater than the default fee to create a store.",
   "error-occurred-while-creating-store" : "Error occurred while creating store.",
   "ensure-chia-services-are-running-and-accessible": "Ensure Chia services are running and accessible.",
   "creating-a-store-is-a-permanent-action-that-cannot-be-un-done!"
@@ -108,5 +109,6 @@
   : "If you need to install Chia, downloads for all platforms can be found at",
   "the-official-downloads-page": "the official downloads page",
   "chia-is-running-retry": "Chia is running, retry",
-  "waiting-for-wallet-to-sync": "Waiting for wallet to sync"
+  "waiting-for-wallet-to-sync": "Waiting for wallet to sync",
+  "the-default-fee-can-be-set-in-settings": "The default fee can be set in settings"
 }
