--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -115,5 +115,8 @@
   "mirror-url": "Mirror URL",
   "mirror-coin-value": "Mirror Coin Value",
   "a-higher-value-gives-the-mirror-more-validity": "A higher value gives the mirror more validity",
-  "create-a-mirror-coin-with-the-specified-value": "create a mirror coin with the specified value"
+  "create-a-mirror-coin-with-the-specified-value": "create a mirror coin with the specified value",
+  "mirrored": "Mirrored",
+  "mirror-url-cannot-be-empty": "Mirror URL cannot be empty",
+  "mirror-coin-value-cannot-be-empty": "Mirror coin value cannot be empty"
 }
