--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -120,8 +120,8 @@
   "mirror-url-cannot-be-empty": "Mirror URL cannot be empty",
   "mirror-coin-value-cannot-be-empty": "Mirror coin value cannot be empty",
   "delete-mirror": "Delete Mirror",
-  "delete-store-mirror": "Delete tore mirror",
+  "delete-store-mirror": "Delete Store Mirror",
   "are-you-sure-you-want-to-delete-this-mirror": "Are you sure you want to delete this mirror",
-  "yes-delete-mirror": "Yes, delete mirror",
+  "yes-delete-mirror": "Yes, Delete Mirror",
   "an-error-occurred-while-deleting-the-mirror": "An error occurred while deleting the mirror"
 }
