--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -117,11 +117,12 @@
   "a-higher-value-gives-the-mirror-more-validity": "A higher value gives the mirror more validity",
   "create-a-mirror-coin-with-the-specified-value": "create a mirror coin with the specified value",
   "mirrored": "Mirrored",
-  "mirror-url-cannot-be-empty": "Mirror URL cannot be empty",
+  "please-enter-a-valid-url": "Please enter a valid URL",
   "mirror-coin-value-cannot-be-empty": "Mirror coin value cannot be empty",
   "delete-mirror": "Delete Mirror",
   "delete-store-mirror": "Delete Store Mirror",
   "are-you-sure-you-want-to-delete-this-mirror": "Are you sure you want to delete this mirror",
   "yes-delete-mirror": "Yes, Delete Mirror",
-  "an-error-occurred-while-deleting-the-mirror": "An error occurred while deleting the mirror"
+  "an-error-occurred-while-deleting-the-mirror": "An error occurred while deleting the mirror",
+  "unchanged-fields-will-default-to-currently-displayed-values": "Unchanged fields will default to currently displayed values"
 }
