feat: usage fees are processed after successful datalayer action and fee processing does not conflict with processing datalayer action

--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -111,7 +111,7 @@
   "the-official-downloads-page": "the official downloads page",
   "chia-is-running-retry": "Chia is running, retry",
   "waiting-for-wallet-to-sync": "Waiting for wallet to sync",
-  "the-default-fee-can-be-set-in-settings": "The default fee can be set in settings"
+  "the-default-fee-can-be-set-in-settings": "The default fee can be set in settings",
   "mirror": "Mirror",
   "add-store-mirror": "Add Store Mirror",
   "mirror-url": "Mirror URL",
