--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -110,5 +110,7 @@
   "the-official-downloads-page": "the official downloads page",
   "chia-is-running-retry": "Chia is running, retry",
   "waiting-for-wallet-to-sync": "Waiting for wallet to sync",
-  "the-default-fee-can-be-set-in-settings": "The default fee can be set in settings"
+  "the-default-fee-can-be-set-in-settings": "The default fee can be set in settings",
+  "application-error": "Application Error",
+  "please-reload-or-restart-the-application": "Please reload or restart the application"
 }
