--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -14,7 +14,6 @@
   "edit-store": "Edit Store",
   "back": "Back",
   "key": "Key",
-  "and": "and",
   "deploy": "Deploy",
   "success": "Success",
   "important": "Important",
@@ -128,7 +127,7 @@
   "an-error-occurred-while-deleting-the-mirror": "An error occurred while deleting the mirror",
   "unchanged-fields-will-default-to-currently-displayed-values": "Unchanged fields will default to currently displayed values",
   "unable-to-add-mirror": "Unable to add mirror",
-  "an-error-occurred-while-adding-the-mirror": "An error occurred while adding the mirror"
+  "an-error-occurred-while-adding-the-mirror": "An error occurred while adding the mirror",
   "application-error": "Application Error",
   "please-reload-or-restart-the-application": "Please reload or restart the application"
 }
