feat: added unsubscribing mark to subscriptions that are in the process of being unsubscribed

--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -129,5 +129,6 @@
   "unable-to-add-mirror": "Unable to add mirror",
   "an-error-occurred-while-adding-the-mirror": "An error occurred while adding the mirror",
   "application-error": "Application Error",
-  "please-reload-or-restart-the-application": "Please reload or restart the application"
+  "please-reload-or-restart-the-application": "Please reload or restart the application",
+  "unsubscribing": "Unsubscribing"
 }
