chore: removed redundant modal and wallet sync check feat: added store count card to the ownedstores and subscriptions tables

--- a/src/renderer/translations/tokens/en-US.json
+++ b/src/renderer/translations/tokens/en-US.json
@@ -26,7 +26,8 @@
   "fee": "Fee",
   "invalid-store-id": "Invalid Store ID",
   "store-id": "Store ID",
-  "store-count:": "Store Count:",
+  "store-count": "Store Count",
+  "subscription-count": "Subscription Count",
   "select-directory-to-deploy": "Select directory to deploy",
   "deploy-selected-directory-to-store": "Deploy selected directory to store",
   "no-data-in-store": "No data in store",
